refactor: jwt 토큰 expose headers에 추가 (#82)